# cbuild

./: .gitignore  .gitmodules  README.md  cbuild  cbuild_cuda_docker  cbuild_debug  cbuild_docker  pyproject.toml  requirements.txt  setup.ps1  setup.sh
config/: env.json  global.json  tool_mapping.json
ports/AdaptiveCpp/: description.json
ports/CUDA/: description.json
ports/CUDA_in_docker/: description.json
ports/Hyper-V/: description.json
ports/OS/: description.json
ports/Visual-Studio/: description.json
ports/abseil-cpp/: description.json
ports/apache_arrow_cpp/: description.json
ports/apache_arrow_python/: description.json
ports/apex/: description.json
ports/asio/: description.json
ports/assembly_env/: description.json
ports/bear/: description.json
ports/bibclean/: description.json
ports/bitsandbytes/: description.json
ports/boost/: description.json
ports/caffe/: description.json
ports/cascadia-code/: description.json
ports/ccache/: description.json
ports/cmake/: description.json
ports/cmake-python-distributions/: description.json
ports/cmd_tools/: description.json
ports/computer_vision_packages/: description.json
ports/cpp-httplib/: description.json
ports/cppcheck/: description.json
ports/cpython/: description.json
ports/cpython_nogil/: description.json
ports/cuSPARSELt/: description.json
scripts/: update_cmake_submodule.ps1  update_cmake_submodule.sh
src/: build_action.py  config.py  environment.py  package.py  package_chain.py  package_description.py  package_spec.py
test/: test_package_spec.py
(+451 files in other folders)
