[project]
name = "cbuild"
version = "0.1"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { text = "BSD License" }
authors = [
  { name = "cyy", email = "cyyever@outlook.com" },
]
classifiers = ["Programming Language :: Python"]

[project.urls]
Repository = "https://github.com/cyyever/cbuild"

[tool.pyright]
include = ["src"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
